设置可覆盖element样式的less

--- a/docs/踩坑记录.md
+++ b/docs/踩坑记录.md
@@ -2,3 +2,5 @@
 2. element自带主题样式未起作用
 3. element font-icon即将废弃;svg icon必须要一个一个声明组件才能用
 4. element image无作用，使用原生img标签
+5. 全局引入less不需要依赖sass-loader、style-resources-loader
+6. element样式自带body margin:8px
