完成 修改实验室信息页 的页面布局和逻辑事件

--- a/docs/踩坑记录.md
+++ b/docs/踩坑记录.md
@@ -4,3 +4,5 @@
 4. element image无作用，使用原生img标签
 5. 全局引入less不需要依赖sass-loader、style-resources-loader
 6. element样式自带body margin:8px
+7. vue-router使用params传参必须附带在name上，query附带在url上
+8. node-express post和put请求需要用body获取参数，get和delete用query获取参数
