--- a/docs/踩坑记录.md
+++ b/docs/踩坑记录.md
@@ -6,3 +6,4 @@
 6. element样式自带body margin:8px
 7. vue-router使用params传参必须附带在name上，query附带在url上
 8. node-express post和put请求需要用body获取参数，get和delete用query获取参数
+9. route.name不能相同
