完成 任课老师-我的申请 页面布局、事件逻辑

--- a/docs/踩坑记录.md
+++ b/docs/踩坑记录.md
@@ -7,3 +7,4 @@
 7. vue-router使用params传参必须附带在name上，query附带在url上
 8. node-express post和put请求需要用body获取参数，get和delete用query获取参数
 9. route.name不能相同
+10. element实现文字对齐的最好方式是el-row/el-col布局系统
